--- a/osa 2/2.6/src/index.css
+++ b/osa 2/2.6/src/index.css
@@ -12,3 +12,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+.notification {
+  background-color: #0f0;
+}
